Adds unity project open detection and manual scanning for problems in unity projects